--- a/Spendr/Modules/Amount/Amount.storyboard
+++ b/Spendr/Modules/Amount/Amount.storyboard
@@ -16,9 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4ax-Oq-6fi" customClass="TappableLabel" customModule="Spendr" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="580" height="580"/>
-                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="100"/>
+                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7El-jT-6Fr" userLabel="Hidden Text Field">
+                                <rect key="frame" x="288" y="285" width="25" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" keyboardAppearance="light"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ax-Oq-6fi" customClass="TappableLabel" customModule="Spendr" customModuleProvider="target">
+                                <rect key="frame" x="10" y="10" width="580" height="60"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -26,12 +31,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="4ax-Oq-6fi" secondAttribute="trailing" constant="10" id="9Sc-5K-jF9"/>
-                            <constraint firstItem="Cad-Rl-k2y" firstAttribute="top" secondItem="4ax-Oq-6fi" secondAttribute="bottom" constant="10" id="KFf-Yg-etb"/>
+                            <constraint firstItem="7El-jT-6Fr" firstAttribute="centerY" secondItem="irK-d7-u2r" secondAttribute="centerY" id="F91-k2-skD"/>
+                            <constraint firstItem="7El-jT-6Fr" firstAttribute="centerX" secondItem="irK-d7-u2r" secondAttribute="centerX" id="WBu-f7-sKn"/>
                             <constraint firstItem="4ax-Oq-6fi" firstAttribute="top" secondItem="irK-d7-u2r" secondAttribute="top" constant="10" id="qJG-ik-LrV"/>
                             <constraint firstItem="4ax-Oq-6fi" firstAttribute="leading" secondItem="irK-d7-u2r" secondAttribute="leading" constant="10" id="xl6-gK-J2D"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="hiddenTextField" destination="7El-jT-6Fr" id="Apj-fG-vHR"/>
                         <outlet property="label" destination="4ax-Oq-6fi" id="1wC-Vk-GDf"/>
                     </connections>
                 </viewController>
