--- a/Spendr/Modules/Amount/Amount.storyboard
+++ b/Spendr/Modules/Amount/Amount.storyboard
@@ -27,14 +27,23 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HXk-4X-iVS">
+                                <rect key="frame" x="283" y="90" width="34" height="30"/>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="save:" destination="1sd-9w-60g" eventType="touchUpInside" id="yu7-C7-7ek"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="4ax-Oq-6fi" secondAttribute="trailing" constant="10" id="9Sc-5K-jF9"/>
                             <constraint firstItem="7El-jT-6Fr" firstAttribute="centerY" secondItem="irK-d7-u2r" secondAttribute="centerY" id="F91-k2-skD"/>
                             <constraint firstItem="7El-jT-6Fr" firstAttribute="centerX" secondItem="irK-d7-u2r" secondAttribute="centerX" id="WBu-f7-sKn"/>
+                            <constraint firstItem="HXk-4X-iVS" firstAttribute="centerX" secondItem="irK-d7-u2r" secondAttribute="centerX" id="m4l-0s-PuL"/>
                             <constraint firstItem="4ax-Oq-6fi" firstAttribute="top" secondItem="irK-d7-u2r" secondAttribute="top" constant="10" id="qJG-ik-LrV"/>
                             <constraint firstItem="4ax-Oq-6fi" firstAttribute="leading" secondItem="irK-d7-u2r" secondAttribute="leading" constant="10" id="xl6-gK-J2D"/>
+                            <constraint firstItem="HXk-4X-iVS" firstAttribute="top" secondItem="4ax-Oq-6fi" secondAttribute="bottom" constant="20" id="yRK-7v-1cf"/>
                         </constraints>
                     </view>
                     <connections>
