--- a/Spendr/Modules/Dashboard/Dashboard.storyboard
+++ b/Spendr/Modules/Dashboard/Dashboard.storyboard
@@ -15,8 +15,28 @@
                     <view key="view" contentMode="scaleToFill" id="8fi-Vf-iDx">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="oR1-kH-sNq">
+                                <rect key="frame" x="20" y="20" width="560" height="180"/>
+                                <string key="text">I spent 
+18.000,00 €
+this month</string>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wMe-XF-tSv" firstAttribute="top" relation="greaterThanOrEqual" secondItem="oR1-kH-sNq" secondAttribute="bottom" constant="20" id="G7k-7I-BWL"/>
+                            <constraint firstItem="oR1-kH-sNq" firstAttribute="top" secondItem="8fi-Vf-iDx" secondAttribute="top" constant="20" id="S9I-FQ-yEp"/>
+                            <constraint firstAttribute="trailing" secondItem="oR1-kH-sNq" secondAttribute="trailing" constant="20" id="cao-af-ghg"/>
+                            <constraint firstItem="oR1-kH-sNq" firstAttribute="leading" secondItem="8fi-Vf-iDx" secondAttribute="leading" constant="20" id="oQu-eG-iXZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="oR1-kH-sNq" id="0F6-ln-hiu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M0o-9K-Q4m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
