--- a/Spendr/Modules/Dashboard/Dashboard.storyboard
+++ b/Spendr/Modules/Dashboard/Dashboard.storyboard
@@ -16,39 +16,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="x4C-y5-lGD">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oR1-kH-sNq">
                                 <rect key="frame" x="20" y="20" width="560" height="165"/>
-                                <string key="text">I spent 
+                                <string key="text">You spent 
 18.000,00 €
 this month</string>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="46"/>
-                                <color key="textColor" red="0.49019607843137253" green="0.52156862745098043" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.672298594366187" green="0.672298594366187" blue="0.672298594366187" alpha="1" colorSpace="calibratedRGB"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fMs-r8-INj">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                                <color key="backgroundColor" red="0.90588235289999997" green="0.25882352939999997" blue="0.24313725489999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="cN0-NK-ybX"/>
-                                </constraints>
-                                <state key="normal" image="Add">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <state key="highlighted" image="Add"/>
-                                <connections>
-                                    <segue destination="msb-FR-A9R" kind="presentation" id="mQC-Gf-dMN"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wMe-XF-tSv" firstAttribute="top" secondItem="fMs-r8-INj" secondAttribute="bottom" id="JWw-iL-dgv"/>
-                            <constraint firstItem="fMs-r8-INj" firstAttribute="leading" secondItem="8fi-Vf-iDx" secondAttribute="leading" id="Me2-sE-e7B"/>
+                            <constraint firstAttribute="trailing" secondItem="x4C-y5-lGD" secondAttribute="trailing" id="6Ty-Xl-6dj"/>
+                            <constraint firstItem="x4C-y5-lGD" firstAttribute="top" secondItem="8fi-Vf-iDx" secondAttribute="top" id="73e-FB-TDV"/>
+                            <constraint firstItem="x4C-y5-lGD" firstAttribute="leading" secondItem="8fi-Vf-iDx" secondAttribute="leading" id="8z8-KN-CQC"/>
+                            <constraint firstItem="wMe-XF-tSv" firstAttribute="top" secondItem="x4C-y5-lGD" secondAttribute="bottom" id="Osc-ex-YYE"/>
                             <constraint firstItem="oR1-kH-sNq" firstAttribute="top" secondItem="8fi-Vf-iDx" secondAttribute="top" constant="20" id="S9I-FQ-yEp"/>
                             <constraint firstAttribute="trailing" secondItem="oR1-kH-sNq" secondAttribute="trailing" constant="20" id="cao-af-ghg"/>
-                            <constraint firstAttribute="trailing" secondItem="fMs-r8-INj" secondAttribute="trailing" id="cgk-Z0-pJ9"/>
                             <constraint firstItem="oR1-kH-sNq" firstAttribute="leading" secondItem="8fi-Vf-iDx" secondAttribute="leading" constant="20" id="oQu-eG-iXZ"/>
-                            <constraint firstItem="fMs-r8-INj" firstAttribute="top" relation="greaterThanOrEqual" secondItem="oR1-kH-sNq" secondAttribute="bottom" constant="20" id="ot0-9R-zhz"/>
                         </constraints>
                     </view>
                     <connections>
@@ -69,6 +60,6 @@ this month</string>
         </scene>
     </scenes>
     <resources>
-        <image name="Add" width="20" height="20"/>
+        <image name="Background" width="1728" height="1152"/>
     </resources>
 </document>
