--- a/Spendr/UI/Base.lproj/LaunchScreen.storyboard
+++ b/Spendr/UI/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="dd4-VS-wXX">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dd4-VS-wXX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="8yl-Oe-95V"/>
+                            <constraint firstItem="dd4-VS-wXX" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="KHA-xD-QC9"/>
+                            <constraint firstAttribute="trailing" secondItem="dd4-VS-wXX" secondAttribute="trailing" id="SCJ-T1-L2m"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="dd4-VS-wXX" secondAttribute="bottom" id="YE5-QK-YYL"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,4 +34,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Background" width="1728" height="1152"/>
+    </resources>
 </document>
