--- a/Spendr/Modules/Dashboard/Dashboard.storyboard
+++ b/Spendr/Modules/Dashboard/Dashboard.storyboard
@@ -33,6 +33,9 @@ this month</string>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="87d-Dm-gsn" userLabel="List Button">
                                 <rect key="frame" x="20" y="527" width="64" height="42"/>
                                 <state key="normal" image="List"/>
+                                <connections>
+                                    <segue destination="cCs-QG-hhq" kind="presentation" id="UUX-rE-snI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zw2-EW-2q4" userLabel="Add Button">
                                 <rect key="frame" x="517" y="516" width="63" height="64"/>
@@ -71,7 +74,15 @@ this month</string>
                 <viewControllerPlaceholder storyboardName="Input" id="msb-FR-A9R" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lsi-9q-QlG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1493" y="313"/>
+            <point key="canvasLocation" x="1493" y="288"/>
+        </scene>
+        <!--Overview-->
+        <scene sceneID="zp8-fX-rDg">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Overview" id="cCs-QG-hhq" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wSt-o2-Yrw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1505.5" y="336"/>
         </scene>
     </scenes>
     <resources>
