--- a/Spendr/Modules/Input.storyboard
+++ b/Spendr/Modules/Input.storyboard
@@ -27,7 +27,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="AWH-DE-wC9">
                                 <rect key="frame" x="271" y="164" width="59" height="120"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="100"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h6d-At-Uyd">
@@ -50,6 +50,10 @@
                             <constraint firstItem="AWH-DE-wC9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="29B-vI-dVM" secondAttribute="leading" constant="10" id="w4N-Jd-2jW"/>
                         </constraints>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="03d-I2-xbv"/>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="amountLabel" destination="AWH-DE-wC9" id="L0V-Hb-eP8"/>
                         <outlet property="hiddenTextField" destination="2cY-FG-hq6" id="HHI-G8-jyK"/>
@@ -79,7 +83,7 @@
                                             <rect key="frame" x="15" y="12" width="32" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pKr-8s-6zM">
@@ -101,9 +105,16 @@
                             <outlet property="delegate" destination="xSS-5o-7cR" id="4N9-ZT-Fqz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="tFh-fQ-AGa"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="tFh-fQ-AGa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="CRj-gY-HJX">
+                            <connections>
+                                <segue destination="obV-Wd-pCO" kind="unwind" unwindAction="unwindToDashboard:" id="U3M-xy-SnU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Au9-V2-NIn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="obV-Wd-pCO" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1897" y="357"/>
         </scene>
